--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
@@ -12,7 +12,7 @@
               {{ _('Preview') }}</div>
           {% else %}
           <div class="btn"> <i class="icon-info-sign"></i>
-              {{ _('More information') }}</div>
+              {{ _('More') }}</div>
           {% endif %}
         </a>
       </li>
