--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -421,6 +421,15 @@ span.space-x3 { padding: 0px 12px }
     margin-top: 10px;
 }
 
+.search-form .filter-list .pill {
+    background-color: #91939D;
+    border-radius: 2px;
+    padding: 2px 8px;
+}
+.pill a.remove {
+    vertical-align: -5%;
+}
+
 section.additional-info header > .btn-group {
     margin-top: 8px;
 }
