--- a/ckanext/publicamundi/templates/package/snippets/resource_form.html
+++ b/ckanext/publicamundi/templates/package/snippets/resource_form.html
@@ -4,7 +4,9 @@
 {% set errors = errors or {} %}
 {% set action = form_action or h.url_for(controller='package', action='new_resource', id=pkg_name) %}
 
-<form id="resource-form" class="dataset-form dataset-resource-form form-horizontal" method="post" action="{{ action }}" data-module="basic-form resource-form" enctype="multipart/form-data">
+<form id="resource-form" class="dataset-form dataset-resource-form form-horizontal" method="post" action="{{ action }}" 
+    data-module="basic-form resource-form" enctype="multipart/form-data"
+  >
     {% block stages %}
     {# An empty stages variable will not show the stages #}
     {% if stage %}
@@ -37,32 +39,78 @@
     {% endblock %}
 
     {% block basic_fields_format %}
-      {% set format_attrs = {'data-module': 'autocomplete', 'data-module-source': '/api/publicamundi/util/resource/format_autocomplete?incomplete=?'} %}
-      {% call form.input('format', id='field-format', label=_('Format'), placeholder=_('eg. csv'), value=data.format, error=errors.format, classes=['control-medium'], attrs=format_attrs) %}
-      {% endcall %}
-    {% endblock %}
+      {% set format_attrs = { 
+           'data-module': 'autocomplete', 
+           'data-module-source': '/api/publicamundi/util/resource/format_autocomplete?incomplete=?',
+           'data-module-label': 'text', 
+           'data-module-key': 'name'} 
+      %}
+      {# 
+        Note: 
+        The uppercased format is only for display, the actual value is always normalized server-side.
+      #}
+      {{ form.input(
+           'format',
+           id='field-format',
+           label=_('Format'),
+           placeholder=_('eg. csv'),
+           value=data.format|upper,
+           error=errors.format,
+           classes=['control-medium'],
+           attrs=format_attrs) 
+      }}
+    {% endblock %} {# basic_fields_format #}
 
     {% block metadata_fields %}
     {% if include_metadata %}
-      {# TODO: Where do these come from, they don't exist in /package/new_package_form.html #}
-      {# {{ form.select('resource_type', id='field-type', label=_('Resource Type'), options=[{'value': 'empty', 'text': _('Select a type…')}], selected="empty", error=errors.type) }} #}
-
-      {{ form.input('last_modified', id='field-last-modified', label=_('Last Modified'), placeholder=_('eg. 2012-06-05'), value=data.last_modified, error=errors.last_modified, classes=[]) }}
-
-      {{ form.input('size', id='field-size', label=_('File Size'), placeholder=_('eg. 1024'), value=data.size, error=errors.size, classes=[]) }}
-
-      {{ form.input('mimetype', id='field-mimetype', label=_('MIME Type'), placeholder=_('eg. application/json'), value=data.mimetype, error=errors.mimetype, classes=[]) }}
-
-      {{ form.input('mimetype_inner', id='field-mimetype-inner', label=_('MIME Type'), placeholder=_('eg. application/json'), value=data.mimetype_inner, error=errors.mimetype_inner, classes=[]) }}
-    {% endif %}
-    {% endblock %}
+    {{ form.input(
+         'last_modified', 
+         id='field-last-modified', 
+         label=_('Last Modified'), 
+         placeholder=_('eg. 2012-06-05'), 
+         value=data.last_modified,
+         error=errors.last_modified, classes=[]) 
+    }}
+    {{ form.input(
+         'size',
+         id='field-size',
+         label=_('File Size'),
+         placeholder=_('eg. 1024'),
+         value=data.size,
+         error=errors.size,
+         classes=[]) 
+    }}
+    {{ form.input(
+         'mimetype',
+         id='field-mimetype',
+         label=_('MIME Type'),
+         placeholder=_('eg. application/json'),
+         value=data.mimetype,
+         error=errors.mimetype,
+         classes=[])
+     }}
+    {{ form.input(
+         'mimetype_inner',
+         id='field-mimetype-inner',
+         label=_('MIME Type'),
+         placeholder=_('eg. application/json'),
+         value=data.mimetype_inner,
+         error=errors.mimetype_inner,
+         classes=[])
+    }}
+    {% endif %} {# include_metadata #}
+    {% endblock %} {# metadata_fields #}
 
     <div class="form-actions">
     {% block delete_button %}
       {% if data.id %}
         {% if h.check_access('resource_delete', {'id': data.id})  %}
           {% set locale = h.dump_json({'content': _('Are you sure you want to delete this resource?')}) %}
-          <a class="btn btn-danger pull-left" href="{% url_for controller='package', action='resource_delete', resource_id=data.id, id=pkg_name %}" data-module="confirm-action" data-module-i18n="{{ locale }}">{% block delete_button_text %}{{ _('Delete') }}{% endblock %}</a>
+          <a class="btn btn-danger pull-left" 
+            href="{% url_for controller='package', action='resource_delete', resource_id=data.id, id=pkg_name %}" 
+            data-module="confirm-action" data-module-i18n="{{ locale }}"
+           >{% block delete_button_text %}{{ _('Delete') }}{% endblock -%}
+          </a>
         {% endif %}
       {% endif %}
     {% endblock %}
@@ -72,10 +120,14 @@
       {% endblock %}
       {% block again_button %}
         <button id="btn-save-again" class="btn" name="save" value="again" type="submit">{{ _('Save & add another') }}</button>
-        {% endblock %}
-      <button id="btn-save-go-metadata" class="btn btn-primary" name="save" value="go-metadata" type="submit">{% block save_button_text %}{{ _('Next: Additional Info') }}{% endblock %}</button>
+      {% endblock %}
+      <button id="btn-save-go-metadata" class="btn btn-primary" name="save" value="go-metadata" type="submit">
+        {%- block save_button_text %}{{ _('Next: Additional Info') }}{% endblock -%}
+      </button>
     {% else %}
-      <button id="btn-save-go-dataset-complete" class="btn btn-primary" name="save" value="go-dataset-complete" type="submit">{{ _('Add') }}</button>
+      <button id="btn-save-go-dataset-complete" class="btn btn-primary" name="save" value="go-dataset-complete" type="submit">
+        {{- _('Add') -}}
+      </button>
     {% endif %}
     </div>
 
