--- a/ckanext/publicamundi/templates/snippets/package_item.html
+++ b/ckanext/publicamundi/templates/snippets/package_item.html
@@ -13,51 +13,52 @@ truncate_title - The length to truncate the title to (default: 80).
 {% set truncate_title = truncate_title or 80 %}
 {% set title = package.title or package.name %}
 {% set notes = h.markdown_extract(package.notes, extract_length=truncate) %}
+{% set package_url = h.url_for(controller='package', action='read', id=package.name) %}
 
 <li class="{{ item_class or "dataset-item" }}">
     {% block package_item_content %}
     <div class="dataset-content">
       {% block package_item_heading %}
       <h3 class="dataset-heading">
-        {{ h.link_to(h.truncate(title, truncate_title), h.url_for(controller='package', action='read', id=package.name)) }}
+        {{ h.link_to(h.truncate(title, truncate_title), package_url) }}
         {% if package.private %}
-          <span class="dataset-private label label-inverse"><i class="icon-lock"></i>{{ _('Private') }}</span>
-        {% endif %}
+        <span class="dataset-private label label-inverse"><i class="icon-lock"></i>{{ _('Private') }}</span>
+        {% endif %} {# private #}
         {% if package.get('state', '').startswith('draft') %}
-          <span class="label label-info state-draft">{{ _('Draft') }}</span>
+        <span class="label label-info state-draft">{{ _('Draft') }}</span>
         {% elif package.get('state', '').startswith('deleted') %}
-          <span class="label label-important state-deleted">{{ _('Deleted') }}</span>
+        <span class="label label-important state-deleted">{{ _('Deleted') }}</span>
         {% elif package.get('state', '').startswith('invalid') %}
-          <span class="label label-warning state-invalid">{{ _('Invalid') }}</span>
-        {% endif %}
-        {{ h.popular('recent views', package.tracking_summary.recent, min=10) if package.tracking_summary }}
+        <span class="label label-warning state-invalid">{{ _('Invalid') }}</span>
+        {% endif %} {# state #}
+        {% if package.tracking_summary %}
+        {{ h.popular('recent views', package.tracking_summary.recent, min=10) }}
+        {% endif %} {# package.tracking_summary #}
       </h3>
       {% endblock %} {# package_item_heading #}
       
       {% block package_item_banner %}
-      {% if banner %}
-        <span class="banner">{{ _('Popular') }}</span>
-      {% endif %}
+      {% if banner %}<span class="banner">{{ _('Popular') }}</span>{% endif %}
       {% endblock %} {# package_item_banner #}
 
       {% block package_item_notes %}  
-      {% if notes %}
-        <div>{{ notes|urlize }}</div>
-      {% endif %}
+      {% if notes %}<div>{{ notes|urlize }}</div>{% endif %}
       {% endblock %} {# package_item_notes #}
     </div>
-    {% endblock %} {# package_item_content #}
     
-    {% if package.resources and not hide_resources %}
     {% block package_item_resources %}
+    {% if package.resources and not hide_resources %}
       <ul class="dataset-resources unstyled">
-        {% for resource in h.dict_list_reduce(package.resources, 'format') %}
-          <li>
-            <a href="{{ h.url_for(controller='package', action='read', id=package.name) }}" class="label" 
-                data-format="{{ resource.lower() }}">{{ resource }}</a>
-          </li>
+        {% for resource in package.resources %}
+        <li>
+          <a class="label"
+            href="{{ h.url_for(controller='package', action='resource_read', id=package.name, resource_id=resource.id) }}"
+            data-format="{{ resource.format }}"
+           >{{ resource.format|upper }}</a>
+        </li>
         {% endfor %}
       </ul>
+    {% endif %} {# package.resources #}
     {% endblock %} {# package_item_resources #}
-    {% endif %}
+    {% endblock %} {# package_item_content #} 
 </li>
