--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_form.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_form.html
@@ -12,9 +12,8 @@
   {% endblock %}
 
   {% block package_fields_autofill %}
-  <button class="btn btn-warning hide" data-module="package-form-autofiller" data-module-formid="package-form">Auto</button>
-  {% resource 'ckanext-publicamundi/package-form-autofiller'  %}
-  {% endblock %} {# package_basic_autofill #}
+  {% if h.debug() %}{% snippet 'package/snippets/form-autofiller.html', form_id='package-form' %}{% endif %}
+  {% endblock %}
 
   {% snippet 'package/snippets/package_metadata_fields.html', data=data, errors=errors, groups_available=groups_available %}
 
