--- a/ckanext/publicamundi/templates/package/snippets/resource_form.html
+++ b/ckanext/publicamundi/templates/package/snippets/resource_form.html
@@ -19,9 +19,8 @@
     <input name="id" value="{{ data.id }}" type="hidden"/>
 
     {% block package_basic_fields_autofill %}
-    <button class="btn btn-warning hide" data-module="package-form-autofiller" data-module-formid="resource-form">Auto</button>
-    {% resource 'ckanext-publicamundi/package-form-autofiller'  %}
-    {% endblock %} {# package_basic_fields_autofill #}
+    {% if h.debug() %}{% snippet 'package/snippets/form-autofiller.html', form_id='resource-form' %}{% endif %}
+    {% endblock %}
 
     {% block basic_fields_url %}
       {% set is_upload = (data.url_type == 'upload') %}
