--- a/ckanext/publicamundi/templates/user/snippets/package_list.html
+++ b/ckanext/publicamundi/templates/user/snippets/package_list.html
@@ -11,9 +11,12 @@ truncate_title - The length to truncate the title to (default: 80).
 
 #}
 {% if packages %}
+  {% snippet 'user/snippets/filter_bar.html', package=package, item_class=item_class, hide_resources=hide_resources, banner=banner, truncate=truncate, truncate_title=truncate_title, parent=parent %}
   <ul class="dataset-list unstyled">
     {% for package in packages %}
-      {% snippet 'user/snippets/package_item.html', package=package, item_class=item_class, hide_resources=hide_resources, banner=banner, truncate=truncate, truncate_title=truncate_title, parent=parent %}
+      {% if package.resources%}
+        {% snippet 'user/snippets/package_item.html', package=package, item_class=item_class, hide_resources=hide_resources, banner=banner, truncate=truncate, truncate_title=truncate_title, parent=parent %}
+      {% endif %}
     {% endfor %}
   </ul>
 {% endif %}
