--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
@@ -30,7 +30,7 @@
       {% if can_edit %}
       <li>
         <a href="{{ h.url_for(controller='package', action='resource_edit', id=pkg.name, resource_id=res.id) }}">
-            <div class="btn"><i class="icon-edit"></i></div>
+            <i class="icon-edit"></i>
                 {#   {{ _('Edit') }}</div> #}
         </a>
       </li>
