--- a/ckanext/publicamundi/templates/package/read.html
+++ b/ckanext/publicamundi/templates/package/read.html
@@ -19,8 +19,8 @@
 {% endblock %}
 
 {% block package_additional_info %}
-  {#{% snippet "package/snippets/package_metadata_table.html", pkg_dict=pkg %}#}
-  {% snippet "package/snippets/additional_info.html", pkg_dict=pkg %}
+  {# This is a replacement for additional_info.html -#}
+  {% snippet "package/snippets/package_metadata_table.html", pkg_dict=pkg %}
 {% endblock %}
 
 {% block secondary_content %}
