--- a/ckanext/publicamundi/templates/package/snippets/objects/read-object-table.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/read-object-table.html
@@ -1,13 +1,14 @@
 <div class="{{ classes|join(' ') }}">     
-{%- if title %}<h3>{{ title }}</h3>{% endif -%}
+    {%- if title %}<h3>{{ title }}</h3>{% endif -%}
     <table class="table table-bordered metadata-table">
-        {% set col_width = 100.0 / (num_cols + 1.5) %}
+        {% with col_width = 100.0 / (num_cols + 1.5) %}
         <colgroup>
             {%- for j in range(1, num_cols) -%}
             <col style="width:{{ '%.1f'|format(col_width) }}%"></col>
             {%- endfor -%}
             <col style="width:{{ '%.1f'|format(col_width * (1 + 1.5)) }}%"></col>
-        </colgroup>    
+        </colgroup>
+        {% endwith %}
         <tbody>
             {% for row in rows -%}
             <tr>
