several theme updates

--- a/ckanext/publicamundi/themes/geodata/templates/package/read.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/read.html
@@ -38,7 +38,7 @@
   {% block package_license %}
     {% snippet "snippets/license.html", pkg_dict=pkg %}
     {% endblock %}
-    {# {% block package_social %}
+     {% block package_social %}
     {% snippet "snippets/social.html" %}
-    {% endblock %} #}
+    {% endblock %} 
     {% endblock %}
