Added specific templates for tabular data (#83)

--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -219,6 +219,15 @@ span.space-x3 { padding: 0px 12px }
     margin-top:10px;
 }
 
+.table td.value > dl, 
+.table td.value > .field-read-widget > dl {
+    margin: 0px 0px 0px 5px;
+}
+
+.table td.value span.number { 
+    font-family: monospace;
+}
+
 .control-required {
     font-size: 14px;
     font-family: menu;
@@ -425,6 +434,10 @@ h1 > .label.package-state {
  * Dataset search/view
  */
 
+section.tags {
+    margin-bottom: 10px;
+}
+
 .search-form {
     margin-top: 10px;
 }
@@ -434,7 +447,7 @@ h1 > .label.package-state {
     border-radius: 2px;
     padding: 2px 8px;
 }
-.pill a.remove {
+.search-form .filter-list .pill a.remove {
     vertical-align: -5%;
 }
 
