--- a/ckanext/publicamundi/templates/package/snippets/fields/read-bool.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-bool.html
@@ -1,4 +1,4 @@
-<div class="{{ classes | join(' ') }}">
+<dl class="{{ classes|join(' ') }}">
     <dt>{{ title }}</dt>
     <dd>{% if value %}{{ _('Yes') }}{% else %}{{ _('No') }}{% endif %}</dd>
-</div>
+</dl>
