--- a/ckanext/publicamundi/templates/package/snippets/fields/read-email.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-email.html
@@ -1,4 +1,4 @@
-<div class="{{ classes | join(' ') }}">
+<dl class="{{ classes|join(' ') }}">
     <dt>{{ title }}</dt>
     <dd class="email"><a href="mailto:{{ value }}">{{ value }}</a></dd>
-</div>
+</dl>
