--- a/ckanext/publicamundi/templates/package/snippets/fields/read-password.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-password.html
@@ -1,4 +1,4 @@
-<div class="{{ classes | join(' ') }}">
+<dl class="{{ classes | join(' ') }}">
     <dt>{{ title }}</dt>
     <dd>{{ '*' }}</dd>
-</div>
+</dl>
