--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-read.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-read.html
@@ -1,4 +1,4 @@
-<div class="{{ " " ~ classes | join(' ') }}">
+<div class="{{ classes|join(' ') }}">
     <header>{% if title %}<h3 class="inline">{{ title }}</h3>{% endif -%}</header>
     {% for k, f in fields.items() -%}
     {{ f.markup }}
