--- a/ckanext/publicamundi/templates/package/snippets/fields/read-text.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-text.html
@@ -1,4 +1,4 @@
-<div class="{{ classes | join(' ') }}">
+<dl class="{{ classes|join(' ') }}">
     <dt>{{ title }}</dt>
     <dd>{{ value }}</dd>
-</div>
+</dl>
