--- a/ckanext/publicamundi/templates/package/snippets/fields/read-uri.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-uri.html
@@ -1,4 +1,4 @@
-<div class="{{ classes | join(' ') }}">
+<dl class="{{ classes|join(' ') }}">
     <dt>{{ title }}</dt>
-    <dd class="url">{{ value | urlize }}</dd>
-</div>
+    <dd class="url">{{ value|urlize }}</dd>
+</dl>
