--- a/ckanext/publicamundi/templates/package/snippets/objects/read-object-table.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/read-object-table.html
@@ -16,14 +16,19 @@
                 {%- with 
                     attrs = { 
                         'class': 'value' if loop.last else 'name',
-                        'rowspan': r.rowspan if r.rowspan > 1 else None, 
-                        'colspan': r.colspan if r.colspan > 1 else None, 
+                        'rowspan': r.rowspan if r.rowspan > 1 else none, 
+                        'colspan': r.colspan if r.colspan > 1 else none,
+                        'property': r.attrs.get('property') if r.attrs else none,
                     }
                 -%}
                 {%- if r.tag == 'th' -%}
-                <th {{ attrs|xmlattr }}>{{ r.title or r.data }}</th>
+                <th {{ attrs|xmlattr }}>
+                    {{- r.title or r.data -}}
+                </th>
                 {% else %}
-                <td {{ attrs|xmlattr }}>{{ r.data|safe }}</td>
+                <td {{ attrs|xmlattr }}>
+                    {{- r.data|safe -}}
+                </td>
                 {%- endif -%}
                 {%- endwith -%} {# attrs #}
                 {%- endfor -%} {# for r in row #}
