--- a/ckanext/publicamundi/themes/geodata/public/css/main.css
+++ b/ckanext/publicamundi/themes/geodata/public/css/main.css
@@ -45,6 +45,7 @@ a {
     //position: absolute;
 }
 .account-masthead .account .notifications a span{
+    font-size:13px;
     background-color: #fff;
     padding-left:0;
 }
@@ -934,6 +935,7 @@ a {
 
 /* Buttons */
 .btn {
+    font-family: 'ACMuli';
     border-radius: 0;
     border: 2px #4E59A4 solid;
     background: #fff;
@@ -1083,7 +1085,7 @@ a {
 /* CKAN control overrides */
 .select2-container-multi .select2-choices .select2-search-choice{
     font-size: 14px;
-    line-height: 17px;
+    line-height: 13px;
 }
 .select2-container .select2-choice, .select2-dropdown-open.select2-drop-above .select2-choice, .select2-dropdown-open.select2-drop-above .select2-choices{
     background-image: none;
@@ -1091,7 +1093,9 @@ a {
     border-radius: 0;
     //border: 3px #4E59A4 solid;
 }
-
+.select2-search-choice-close, .select2-container-multi .select2-search-choice-close{
+    top: 4px;
+}
 .select2-container .select2-choice .select2-arrow{
     background-image:none;
     background: #fff;
@@ -1254,7 +1258,9 @@ a {
 {
     background-image: url("../../images/icons/resources/txt.svg");
 }
-.format-label[data-format=shp], .format-label[data-format*=shp]
+.format-label[data-format=shp], .format-label[data-format*=shp], .format-label[data-format=shapefile], .format-label[data-format*=shapefile], .format-label[data-format=shape], .format-label[data-format*=shape]
+
+
 {
     background-image: url("../../images/icons/resources/shapefile.svg");
 }
