--- a/ckanext/publicamundi/themes/geodata/public/css/main.css
+++ b/ckanext/publicamundi/themes/geodata/public/css/main.css
@@ -424,7 +424,8 @@ a {
 }
 .menu-item span{
     max-width: 75px;
-    margin-top: 5px;
+    margin-top: 8px;
+    margin-right: 0;
     line-height: 15px;
 }
 .icons-grid li img{
@@ -1071,9 +1072,10 @@ a {
     padding: 0 20px 0 20px;
 }
 
-.dataset-resources  li a{
+.dataset-resources li a{
     border: 1px #4E59A4 solid;
     font-size: 12px;
+    margin-bottom: 5px;
     border-radius: 0;
     background-color: #fff !important;
     color: #4E59A4 !important;
