--- a/ckanext/publicamundi/themes/geodata/templates/snippets/package_item_search.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/package_item_search.html
@@ -69,15 +69,20 @@ Example:
       </div>
       {% endif %}
   </div>
-
+    {% block package_item_resources %}
     {% if package.resources and not hide_resources %}
       <ul class="dataset-resources unstyled">
-        {% for resource in h.dict_list_reduce(package.resources, 'format') %}
-          <li>
-            <a href="{{ h.url_for(controller='package', action='read', id=package.name) }}" class="label" data-format="{{ resource.lower() }}">{{ resource }}</a>
-          </li>
+        {% for resource in package.resources %}
+        <li>
+          <a class="label"
+            href="{{ h.url_for(controller='package', action='resource_read', id=package.name, resource_id=resource.id) }}"
+            data-format="{{ resource.format }}"
+           >{{ resource.format|upper }}</a>
+        </li>
         {% endfor %}
       </ul>
-    {% endif %}
-  {% endblock %}
+    {% endif %} {# package.resources #}
+    {% endblock %} {# package_item_resources #}
+
+      {% endblock %}
 </li>
