--- a/ckanext/publicamundi/storers/vector/templates/user/snippets/ingest_templates/vector/singlelayer_format.html
+++ b/ckanext/publicamundi/storers/vector/templates/user/snippets/ingest_templates/vector/singlelayer_format.html
@@ -16,17 +16,25 @@
 
    <input type="checkbox" id="checkbox_{{layer.idx}}"  name="checkbox_layer" style="display: none;" checked>
     <div id="divproj" class="form-select ">
-	<label>{{ _('Enter projection')}}</label> 
-	{% if layer.layer_srs==-1 %}
-	 <input  id="layer_srs_{{layer.idx}}" type="text" name="srs_input">
-	{% else %}
-	 <input  id="layer_srs_{{layer.idx}}" type="text" name="srs_input" value="{{layer.layer_srs}}">
-	{% endif %}
-	
-	      
+    
+    <label>{{ _('Layer Name')}}</label> 
+    
+    <input  id="layer_name_{{layer.idx}}" type="text" name="layer_name_input"  value="{{layer.layer_name}}">
+    </br>
+    <label>{{ _('Projection')}}</label> 
+    {% if layer.layer_srs==-1 %}
+    <input  id="layer_srs_{{layer.idx}}" type="text" name="srs_input">
+    {% else %}
+    <input  id="layer_srs_{{layer.idx}}" type="text" name="srs_input" value="{{layer.layer_srs}}">
+    {% endif %}
+     
+    <label>{{ _('Layer Encoding')}}</label> 
+    
+    <input  id="layer_encoding_{{layer.idx}}" type="text" name="layer_encoding_input">
+    </br>
     </div>
 
-	
+
     <div id="proj-error" class="projection-error"></div>
 
 
