--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
@@ -90,7 +90,7 @@
 
 {% set dt = data.get('dataset_type') -%}
 {% set dt_prefix = dt -%}
-{% set obj = data.get(dt_prefix) or h.make_object(dt) -%}
+{% set obj = data.get(dt_prefix) or h.make_metadata_object(dt) -%}
 
 {# A workaround for bug #36 #}
 {% if is_draft -%}
